<resources>
    <string name="app_name">InAndroid2022</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="do_you_have_an_account_yet">Do you have an account yet?</string>
    <string name="full_name">Full Name</string>
    <string name="custom_app_name">Super News</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="gender">Gender</string>
    <string name="news">News</string>
    <string-array name="GenderItems">
        <item>Male</item>
        <item>Female</item>
        <item>Not specify</item>
    </string-array>
    <string name="title_activity_calculator_compose">CalculatorComposeActivity</string>
    <string name="title_activity_news_compose">NewsComposeActivity</string>
</resources>